--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -2,7 +2,7 @@ Name: kafka
 Cartridge-Short-Name: KAFKA
 Architecture: noarch
 Display-Name: Kafka 2.8.0
-Description: "Kafka is a distributed, partitioned, replicated commit log service. It provides the functionality of a messaging system, but with a unique design"
+Description: "kafka"
 Version: '2.8.0'
 Versions: [2.8.0]
 Cartridge-Version: 0.0.1
@@ -15,28 +15,28 @@ Categories:
 Cart-Data:
   - Key: OPENSHIFT_KAFKA_LOG_DIR
     Type: environment
-    Description: "Directory to store application log files."
+    Description: ""
   - Key: OPENSHIFT_TMP_DIR
     Type: environment
-    Description: "Directory to store application temporary files."
+    Description: ""
   - Key: OPENSHIFT_REPO_DIR
     Type: environment
-    Description: "Application root directory where application files reside. This directory is reset every time you do a git-push"
+    Description: ""
   - Key: OPENSHIFT_APP_DNS
     Type: environment
-    Description: "Fully qualified domain name for the application."
+    Description: ""
   - Key: OPENSHIFT_APP_NAME
     Type: environment
-    Description: "Application name"
+    Description: ""
   - Key: OPENSHIFT_DATA_DIR
     Type: environment
-    Description: "Directory to store application data files. Preserved across git-pushes. Not shared across gears."
+    Description: ""
   - Key: OPENSHIFT_APP_UUID
     Type: environment
-    Description: "Unique ID which identified the application. Does not change between gears."
+    Description: ""
   - Key: OPENSHIFT_GEAR_UUID
     Type: environment
-    Description: "Unique ID which identified the gear. This value changes between gears."
+    Description: ""
 Website: http://kafka.apache.org
 Source-Url: https://github.com/FlavioF/kafka-cartridge.git
 Provides:
